# python-gunicorn-uvicorn

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/core/: settings.py
src/core/gunicorn/: __init__.py  application.py  logger.py
tests/: test_main.py
